@@ -6,14 +6,14 @@ Maintainer: Meik Michalke <meik.michalke@hhu.de>
 Depends: R (>= 3.1),koRpus (>= 0.11-2)
 Imports: methods,sylly.it
 Additional_repositories: https://undocumeantit.github.io/repos/l10n
-Description: Adds support for the Italian language to the 'koRpus' package. To ask for help, report bugs, suggest feature improvements, or discuss the global development of the
-                    package, please consider subscribing to the koRpus-dev mailing list (<http://korpusml.reaktanz.de>).
+Description: Adds support for the Italian language to the 'koRpus' package. To ask for help, report bugs, suggest feature improvements, or discuss the global development of the package, please consider subscribing to the
+                         koRpus-dev mailing list (<http://korpusml.reaktanz.de>).
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyLoad: yes
 URL: https://reaktanz.de/?c=hacking&s=koRpus
 BugReports: https://github.com/unDocUMeantIt/koRpus.lang.it/issues
 Authors@R: c(person(given="Meik", family="Michalke", email="meik.michalke@hhu.de", role=c("aut", "cre")), person(given="Alberto", family="Mirisola", role=c("ctb")))
-Version: 0.1-1
-Date: 2018-01-05
+Version: 0.1-2
+Date: 2018-02-21
 RoxygenNote: 6.0.1
