@@ -3,8 +3,8 @@
 #' \tabular{ll}{
 #' Package: \tab koRpus.lang.it\cr
 #' Type: \tab Package\cr
-#' Version: \tab 0.1-1\cr
-#' Date: \tab 2018-01-05\cr
+#' Version: \tab 0.1-2\cr
+#' Date: \tab 2018-02-21\cr
 #' Depends: \tab R (>= 3.1),koRpus (>= 0.11-2)\cr
 #' Encoding: \tab UTF-8\cr
 #' License: \tab GPL (>= 3)\cr
